Update for deprecation in Java 9. Use Integer cache.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1769905 13f79535-47bb-0310-9956-ffa450edef68